2007-06-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-lynx-like-map, w3m-info-like-map): Bind [backtab] to
	w3m-previous-anchor.

2007-06-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-local-retrieve, w3m-w3m-retrieve, w3m-about-retrieve)
	(w3m-cid-retrieve, w3m-data-retrieve, w3m-retrieve, w3m-about-header):
	Change the term and the symbol name `no-decode' into `no-uncompress'.

2007-06-08  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-w3m-retrieve): Check if content-type is wrong after
	decoding encoded contents.

	* w3m-ems.el (w3m-create-image, w3m-create-resized-image): Decode
	content retrieving image.

	* w3m-xmas.el (w3m-create-image, w3m-create-resized-image): Ditto.

2007-06-07  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-search.el (w3m-search-engine-alist): Add output encoding argument
	to google search.

2007-06-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-image.el (w3m-imagick-convert-program, w3m-resize-images): Reset
	them if convert program is not really available.
	(w3m-imagick-convert-program-available-p): New function.
	(w3m-imagick-convert-buffer, w3m-imagick-start-convert-data): Use it.

2007-06-05  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* w3m-image.el (w3m-imagick-start-convert-data): Clarify message which
	is issued when convert program is not available.

2007-06-05  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-filter.el (w3m-filter-mixi): Follow the change of Mixi's HTML.

2007-06-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* attic/vm-w3m.el, attic/vm-7.19.patch: Remove.  They have been
	integrated into VM 8.x.

2007-05-17  Tatsuya Kinoshita  <tats@vega.ocn.ne.jp>

	* w3m.el (w3m-view-this-url-1): Check whether the marker buffer exists.

2007-05-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ems.el (w3m-switch-to-buffer, w3m-subst-switch-to-buffer-keys):
	Remove.

2007-05-17  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-expand-url): Guard error in aref when url is "".
